fixes the spacing for the nav bar

--- a/sass/header.scss
+++ b/sass/header.scss
@@ -8,7 +8,8 @@
 
   .navBar {
     display: flex;
-    float: right;
+    justify-content: flex-end;
+    width: 100%;
 
     nav {
       float: right;
@@ -47,7 +48,7 @@
       family: $font;
       weight: 700;
     }
-    padding-top: 100px;
+    padding-top: 75px;
     text-transform: uppercase;
     letter-spacing: 0.05em;
     clear: both;
@@ -82,7 +83,7 @@
     display: none;
     width: 50px;
     height: 50px;
-    margin: 20px 30px 0 0;
+    margin: 15px 23px 0 0;
     align-items: center;
     cursor: pointer;
 
@@ -177,6 +178,6 @@
   }
 
   .title {
-    padding-top: 77px !important;
+    padding-top: 57px !important;
   }
 }
